prevent line break in episode count

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -646,6 +646,7 @@ body {
               text-align: center;
               left: 19px;
               top: 3px;
+              white-space: nowrap;
 
               a {
                 color: $fontColor;
